# lapse_controller

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  controls.js  index.htm  version.sh
include/: config.h  config.h.in  lapse_controller.hpp
src/: lapse_controller.cpp
www/: controls.htm  controls.js  index.htm  util.js  viewer.htm
